[package]
name = "binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = { version = "1.0.107", features = ["c++14"] }
petgraph = "0.6.4"

[build-dependencies]
cxx-build = "1.0.107"
